daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N8_unsorted_policy_array/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658403a4d83cda136593b43ad19688b55fe3eef4b1c389290c2f9dec8ee49c5fc3469874addd6565ab192afd011ff4515f6aa351dcfa774a03f5b13fa41986bd6704b
